Began evidence reintegration; click events bug on iphone back

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -353,14 +353,14 @@ header {
 /*********/
 /* Evid  */
 /*********/
-#evid {
-    h3 {
-        margin: 0 100px; 
-    }
-    .section-heading {
-        padding-top: 55px;
-    }
-}
+// #evid {
+//     h3 {
+//         margin: 0 100px; 
+//     }
+//     .section-heading {
+//         padding-top: 55px;
+//     }
+// }
 
 
 /*****************/
@@ -391,7 +391,7 @@ header {
 /**********/
 /* FAQ    */
 /**********/
-#faq {
+#faq, #evid {
     *[id]:before {
       display: block;
       content: " ";
@@ -414,6 +414,9 @@ header {
         &.affix {
           top:95px;
         }
+    }
+    .evid-nav {
+        width:170px;    
     }
     ul {
         list-style-type:none;
@@ -447,7 +450,7 @@ header {
             margin-left:0
         }
     }
-    ul.faq-nav {
+    ul.faq-nav, ul.evid-nav {
         position:relative;
         li {
             padding:0;
@@ -459,9 +462,12 @@ header {
         font-weight: 600;
         margin:15px 0;
     }
-    .side-nav { 
-        &.affix, &.affix-top { 
+    .side-nav {
+        &.affix {
             position: fixed!important;
+        }
+        &.affix-top { 
+            position: absolute!important;
         }
         &.affix-bottom {
             position: absolute !important;
